tests/paczka1/small_fuzzy/99009035.err
Error in line 2: CNlwPPrt S111 78,2
Error in line 4: c4O2Br9 S910 35,7
Error in line 12: whJ3GU A573 66,3
Error in line 13: whJ3GU S910 1,4
